boreal/tests/assets/invalid_files/compilation/unknown_identifier.yar
// [error: unknown identifier "foo"]
rule a {
    condition: foo
}
